[package]
name = "crawler"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
awc = { version = "0.2.2", features = ["ssl"] }
bytes = "0.4.12"
futures = "0.1.28"
html5ever = "0.24.0"
env_logger = "0.6.2"
log = "0.4.7"
serde = { version = "1.0.97", features = ["derive"] }
tokio = "0.1.22"
url = { version = "2.0.0", features = ["serde"] }
actix-rt = "0.2.4"
openssl = "0.10.24"
